# aiot-os

./: .gitignore  API_GUIDELINES.md  API_POLICY.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  api_spec.yaml  clippy_output.txt  doc_fixer.py  fix.ps1  fix2.ps1  fix_default.ps1  scaffold_phase3.py  warnings.txt  warnings2.txt
.github/workflows/: ci.yml
best_practice/: README.md
crates/accelerator/: Cargo.toml
crates/agents/: Cargo.toml
crates/ai_gateway/: Cargo.toml
crates/ai_runtime/: Cargo.toml
crates/ai_studio/: Cargo.toml
crates/autoscaler/: Cargo.toml
crates/autoscaling/: Cargo.toml
crates/benchmark_engine/: Cargo.toml
crates/billing/: Cargo.toml
crates/chaos/: Cargo.toml
crates/cli/: Cargo.toml
crates/cloud_console/: Cargo.toml
crates/cluster/: Cargo.toml
crates/cluster_manager/: Cargo.toml
crates/cognitive/: Cargo.toml
crates/compatibility/: Cargo.toml
crates/compiler/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: api.rs  internal.rs  prelude.rs
crates/cost_analyzer/: Cargo.toml
crates/cost_router/: Cargo.toml
crates/dashboard/: Cargo.toml
crates/dataset/: Cargo.toml
crates/dataset_registry/: Cargo.toml
crates/dataset_validator/: Cargo.toml
crates/deployment/: Cargo.toml
crates/deployment_manager/: Cargo.toml
crates/device/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/distributed_queue/: Cargo.toml
crates/edge_runtime/: Cargo.toml
crates/embedding/: Cargo.toml
crates/evaluation/: Cargo.toml
crates/event/: Cargo.toml
crates/evolution/: Cargo.toml
crates/explainability/: Cargo.toml
crates/federated/: Cargo.toml
crates/governance/: Cargo.toml
crates/gpu_manager/: Cargo.toml
crates/graph/: Cargo.toml
crates/hal/: Cargo.toml
crates/hypervisor/: Cargo.toml
crates/identity/: Cargo.toml
crates/integration/: Cargo.toml
crates/integration/src/: api.rs  legacy_code.rs.bak
crates/integration/tests/: di_test.rs  e2e_pipeline.rs  failover.rs  recovery.rs  scheduler.rs  shutdown.rs  startup.rs  storage.rs  telemetry.rs
crates/knowledge/: Cargo.toml
crates/leaderboard/: Cargo.toml
crates/license_manager/: Cargo.toml
crates/maintenance/: Cargo.toml
crates/marketplace/: Cargo.toml
crates/memory/: Cargo.toml
crates/mission/: Cargo.toml
crates/models/: Cargo.toml
crates/module_registry/: Cargo.toml
crates/multi_model_router/: Cargo.toml
crates/network/: Cargo.toml
crates/observability/: Cargo.toml
crates/ota_update/: Cargo.toml
crates/performance/: Cargo.toml
crates/platform/: Cargo.toml
crates/plugin_api/: Cargo.toml
crates/plugin_loader/: Cargo.toml
crates/plugin_registry/: Cargo.toml
crates/plugin_sdk/: Cargo.toml
crates/plugin_wasm/: Cargo.toml
crates/plugins/: Cargo.toml
crates/policy_engine/: Cargo.toml
crates/production/: Cargo.toml
crates/prompt_registry/: Cargo.toml
crates/queue/: Cargo.toml
crates/rag_framework/: Cargo.toml
crates/registry/: Cargo.toml
crates/release_manager/: Cargo.toml
crates/reranker/: Cargo.toml
crates/research/: Cargo.toml
crates/resilience/: Cargo.toml
crates/resource/: Cargo.toml
crates/resource_manager/: Cargo.toml
crates/resource_scheduler/: Cargo.toml
crates/retriever/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime_profiler/: Cargo.toml
crates/runtime_wasm/: Cargo.toml
crates/safety/: Cargo.toml
crates/scheduler/: Cargo.toml
crates/sdk/: Cargo.toml
crates/sdk_gen/: Cargo.toml
crates/secret_manager/: Cargo.toml
crates/security/: Cargo.toml
crates/service_discovery/: Cargo.toml
crates/simulation/: Cargo.toml
crates/storage/: Cargo.toml
crates/sysconfig/: Cargo.toml
crates/telemetry/: Cargo.toml
docs/: API_LIFECYCLE.md  API_STABILITY_MATRIX.md  COMPATIBILITY.md  DisasterRecovery.md  SLO.md  VERSIONING.md  book.toml
governance/: COMPATIBILITY_POLICY.md  FOUNDATION.md  RELEASE_POLICY.md  SIGs.md  TSC.md
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  network-policy.yaml  secret.yaml  service.yaml
paper/: aiot_paper.tex
sdk/go/: go.mod  (+1 more)
spec/: api-spec.md  capability-spec.md  cli-spec.md  event-spec.md  framework-spec.md  memory-spec.md  plugin-spec.md  runtime-spec.md  scheduler-spec.md  sdk-spec.md  security-spec.md  workflow-spec.md
vscode-extension/: package.json
(+260 files in other folders)
