[package]
name = "integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
aiot_core = { path = "../core" }
runtime = { path = "../runtime" }
scheduler = { path = "../scheduler" }
queue = { path = "../queue" }
resilience = { path = "../resilience" }
diagnostics = { path = "../diagnostics" }
storage = { path = "../storage" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.aiot]
framework = "aiot"
framework_version = "1"
sdk = "1"
